# NLP-LegalQA

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  debug_map.txt  neo4j.md  prompt.md  pyproject.toml  test_slice.py
.claude/: settings.local.json
artifacts/: test_verify.csv
data/: 02a0f6e0-05cd-2e00-fa7e-33b97d5c98e0.json  02a0f6e0-05cd-2e00-fa7e-33b97d5c98e0.txt  0379c986-0671-f900-0c89-b91abd8d1d34.json  0379c986-0671-f900-0c89-b91abd8d1d34.txt  3c61dea5-062a-8100-85c9-6890ef4e95d3.json  3c61dea5-062a-8100-85c9-6890ef4e95d3.txt  401141b3-0118-9100-0919-2e1ba27538ff.json  401141b3-0118-9100-0919-2e1ba27538ff.txt  77246c27-059a-a500-3db7-70f2ceab2ebb.json  77246c27-059a-a500-3db7-70f2ceab2ebb.txt  8ccd95ae-0581-6000-3277-5a938aba5e51.json  8ccd95ae-0581-6000-3277-5a938aba5e51.txt  90bbf4e1-057f-ec00-7fc6-7d7f1c487a66.json  90bbf4e1-057f-ec00-7fc6-7d7f1c487a66.txt  9ed2a463-02ab-f500-2bad-cf5a424c7170.json  9ed2a463-02ab-f500-2bad-cf5a424c7170.txt  a23acd3d-0347-de00-7bd0-1da3bdd18347.json  a23acd3d-0347-de00-7bd0-1da3bdd18347.txt  a366447d-02bd-bc00-3268-f84e46ffb699.json  a366447d-02bd-bc00-3268-f84e46ffb699.txt  a3f7f1a2-05d7-3800-5494-384c43691806.json  a3f7f1a2-05d7-3800-5494-384c43691806.txt  e744da74-02fb-2b00-46cf-a539f0c2973e.json  e744da74-02fb-2b00-46cf-a539f0c2973e.txt
data2/: input.json  progress.json  prompt.txt  train1.json
eval_results/: metrics_summary.csv  row_results.csv  row_results_test.csv
eval_results_qa_reranker/: row_qa_results.csv
eval_results_reranker/: metrics_summary_reranker.csv  row_results_reranker.csv
eval_results_v2/: metrics_summary_decomposition.csv  row_results_decomposition.csv
eval_results_v3/: metrics_summary_vector_only.csv  row_results_vector_only.csv
eval_results_v4/: metrics_summary_full_pipeline.csv  row_results_full_pipeline.csv  row_results_no_hybrid.csv
frontend/: .env.example  components.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/llm/: README.md  (+25 more)
(+353 files in other folders)
