[project]
name = "nlp-legalqa"
version = "0.1.0"
description = "Vietnamese legal document scraper and QA toolkit"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "neo4j>=5.28.0",
    "langchain-huggingface>=1.2.1",
    "langchain-neo4j>=0.8.0",
    "langchain-community>=0.4.1",
    "sentence-transformers>=5.3.0",
    "pyvi>=0.1.1",
    "pandas>=2.2.0",
    "aiohttp>=3.10.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.0",
    "google-genai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
annotate = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
legal-scraper = "legal_scraper.cli:main"
annotate = "annotate_qa.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_scraper", "src/llm"]
